<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="4dp"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle_outside"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/tvOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/_3210"
                    android:textSize="11sp"
                    android:background="@color/background"
                    android:textColor="@color/background"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tvItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:background="@color/background"
                    android:layout_marginTop="6dp"
                    android:text="@string/item_name"
                    android:textColor="@color/background"
                    tools:ignore="RtlSymmetry" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="12dp"
                    android:weightSum="2"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/time"
                        android:background="@color/background"
                        android:textColor="@color/background"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="12sp"
                        android:text="@string/date"
                        android:background="@color/background"
                        android:textColor="@color/background"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                    android:id="@+id/tvStatusOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/_3210"
                    android:textSize="11sp"
                    android:background="@color/background"
                    android:textColor="@color/background"
                    tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/tvSubTotalItem"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:text="Rp. 0 "
                        android:textColor="@color/background"
                        android:background="@color/background"
                        android:textStyle="bold"
                        android:gravity="center"/>


                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="6dp"/>

</LinearLayout>